--- a/wblog-front/package.json
+++ b/wblog-front/package.json
@@ -10,8 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
