--- a/wblog-backend/security/src/main/resources/application.yml
+++ b/wblog-backend/security/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 server:
   servlet:
     context-path: /uac
+  port: 22000
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/wblog?characterEncoding=utf-8&useSSL=false
