--- a/wblog-front/package.json
+++ b/wblog-front/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
+    "vue-froala-wysiwyg": "^3.0.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
